--- a/package.json
+++ b/package.json
@@ -1,12 +1,17 @@
 {
 	"name": "chai-backend",
 	"version": "1.0.0",
+	"type": "module",
 	"description": "backend project from chaiaurcode channel",
 	"main": "index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"dev": "nodemon src/index.js"
 	},
 	"keywords": [],
 	"author": "Chiranth Chiplunkar",
-	"license": "ISC"
+	"license": "ISC",
+	"devDependencies": {
+		"prettier": "^3.1.1"
+	}
 }
